Add logo images to header and footer

--- a/aether.html
+++ b/aether.html
@@ -14,8 +14,7 @@
   <header>
     <nav class="container">
       <a href="index.html" class="logo">
-        <span class="logo-mark"></span>
-        <span>Pragmatica Labs</span>
+        <img src="image/logo_reverse.png" alt="Pragmatica Labs">
       </a>
       <ul class="nav-links">
         <li><a href="jbct.html">JBCT</a></li>
@@ -202,9 +201,8 @@
     <div class="container">
       <div class="footer-content">
         <div class="footer-brand">
-          <a href="index.html" class="logo">
-            <span class="logo-mark"></span>
-            <span>Pragmatica Labs</span>
+          <a href="index.html" class="logo logo-footer">
+            <img src="image/logo_reverse.png" alt="Pragmatica Labs">
           </a>
           <p>Pragmatic solutions for Java teams.</p>
         </div>
