--- a/index.html
+++ b/index.html
@@ -58,11 +58,11 @@
         <div class="card">
           <div class="card-icon">A</div>
           <h3>Aether</h3>
-          <p>Distributed Java runtime — the third option between monolith and microservices.</p>
+          <p>Distributed Java runtime with predictive autoscaling — the third option between monolith and microservices.</p>
           <ul class="features-list">
-            <li>Simpler than Kubernetes</li>
-            <li>Focus on business logic, not infrastructure</li>
-            <li>Built-in observability</li>
+            <li>ML-based predictive autoscaling</li>
+            <li>Zero-downtime rolling updates</li>
+            <li>Production-validated (80 E2E tests)</li>
             <li>Pilot program available</li>
           </ul>
           <a href="aether.html" class="btn btn-outline mt-2">Learn More</a>
