Fix broken Leanpub book URL

--- a/jbct.html
+++ b/jbct.html
@@ -137,7 +137,7 @@
         <div class="card">
           <h3>Book</h3>
           <p>"Java Backend Coding Technology" — comprehensive guide available on Leanpub.</p>
-          <a href="https://leanpub.com/java-backend-coding-technology" target="_blank" class="btn btn-outline mt-2">Get the Book</a>
+          <a href="https://leanpub.com/jbct-book" target="_blank" class="btn btn-outline mt-2">Get the Book</a>
         </div>
         <div class="card">
           <h3>CLI & Plugin</h3>
