Use full name 'Pragmatica Aether' in key places

--- a/aether.html
+++ b/aether.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Aether | Distributed Java Runtime | Pragmatica Labs</title>
-  <meta name="description" content="Aether - distributed Java runtime with predictive autoscaling. The third option between monolith and microservices. Production-validated with 80 E2E tests.">
+  <title>Pragmatica Aether | Distributed Java Runtime | Pragmatica Labs</title>
+  <meta name="description" content="Pragmatica Aether - distributed Java runtime with predictive autoscaling. The third option between monolith and microservices. Production-validated with 80 E2E tests.">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
@@ -27,7 +27,7 @@
 
   <section class="product-hero">
     <div class="container">
-      <h1>Aether</h1>
+      <h1>Pragmatica Aether</h1>
       <p>Distributed Java runtime with predictive autoscaling. The third option between monolith and microservices. Write business logic, deploy distributed.</p>
     </div>
   </section>
@@ -221,7 +221,7 @@
         </div>
         <div class="card">
           <h3>Current Version</h3>
-          <p>Aether 0.7.1 — Production-validated, 80 E2E tests, predictive autoscaling.</p>
+          <p>Pragmatica Aether 0.7.1 — Production-validated, 80 E2E tests, predictive autoscaling.</p>
         </div>
         <div class="card">
           <h3>Questions?</h3>
