--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         </div>
         <div class="card">
           <div class="card-icon">A</div>
-          <h3>Aether</h3>
+          <h3>Pragmatica Aether</h3>
           <p>Distributed Java runtime with predictive autoscaling — the third option between monolith and microservices.</p>
           <ul class="features-list">
             <li>ML-based predictive autoscaling</li>
